// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`smoke and snapshot tests matches snapshots 1`] = `
<SelectableHeatMap
  caption="foo"
  data={
    Array [
      Object {
        "age": 27,
        "budget": 45000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "DJ Dance Party",
        "episode": 1,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 2,
        "guests": 250,
        "name": "Nic",
        "ranking": 2,
        "scoresGiven": Array [
          5,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Joe",
        "state": "New Jersey",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 30,
        "budget": 25000,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Garden Paradise",
        "episode": 1,
        "expDiffRanking": 3,
        "expGivenRanking": 3,
        "expReceivedRanking": 3,
        "guests": 140,
        "name": "Nadine",
        "ranking": 3,
        "scoresGiven": Array [
          6,
          6,
          9,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 21,
          "food": 19,
          "venue": 16,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Quincy",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 40,
        "budget": 35000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 3,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Day at the Races",
        "episode": 1,
        "expDiffRanking": 4,
        "expGivenRanking": 1,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Nicole",
        "ranking": 4,
        "scoresGiven": Array [
          9,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 20,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 40,
        "spouseName": "Rob",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 24,
        "budget": 70000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 1,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Big Fat Greek Wedding",
        "episode": 1,
        "expDiffRanking": 2,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 300,
        "name": "Dimitra",
        "ranking": 1,
        "scoresGiven": Array [
          8,
          9,
          7,
        ],
        "scoresReceived": Object {
          "dress": 26,
          "experience": 25,
          "food": 22,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 29,
        "spouseName": "John",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 23,
        "budget": 55000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 1,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Japanese Garden Gala",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 3,
        "guests": 130,
        "name": "Emilee",
        "ranking": 2,
        "scoresGiven": Array [
          7,
          5,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 22,
          "food": 15,
          "venue": 26,
        },
        "season": 1,
        "spouseAge": 23,
        "spouseName": "Drew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 22,
        "budget": 20000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 3,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "By the Book",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 3,
        "expReceivedRanking": 1,
        "guests": 100,
        "name": "Danielle",
        "ranking": 1,
        "scoresGiven": Array [
          7,
          6,
          8,
        ],
        "scoresReceived": Object {
          "dress": 30,
          "experience": 23,
          "food": 26,
          "venue": 12,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Ed",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 36,
        "budget": 12500,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Sunrise Surprise",
        "episode": 2,
        "expDiffRanking": 4,
        "expGivenRanking": 2,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Keshia",
        "ranking": 4,
        "scoresGiven": Array [
          7,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 15,
          "experience": 18,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Tony",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 28,
        "budget": 25000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Beach Ball",
        "episode": 2,
        "expDiffRanking": 3,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 160,
        "name": "Tonya",
        "ranking": 3,
        "scoresGiven": Array [
          8,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 35,
        "spouseName": "Andrew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
    ]
  }
  getTooltipBody={[Function]}
  getTooltipTitle={[Function]}
  selectOptions={
    Array [
      Object {
        "accessor": [Function],
        "colors": Array [
          "#fff1ef",
          "#FF3C23",
        ],
        "label": "Color by Number of Weddings",
        "value": "weddingCount",
      },
      Object {
        "accessor": [Function],
        "colors": Array [
          "#fff1ef",
          "#FF3C23",
        ],
        "label": "Color by Average Wedding Budget",
        "value": "avgBudget",
      },
    ]
  }
/>
`;

exports[`smoke and snapshot tests matches snapshots 2`] = `
<SelectableHistogram
  caption="foo"
  data={
    Array [
      Object {
        "age": 27,
        "budget": 45000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "DJ Dance Party",
        "episode": 1,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 2,
        "guests": 250,
        "name": "Nic",
        "ranking": 2,
        "scoresGiven": Array [
          5,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Joe",
        "state": "New Jersey",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 30,
        "budget": 25000,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Garden Paradise",
        "episode": 1,
        "expDiffRanking": 3,
        "expGivenRanking": 3,
        "expReceivedRanking": 3,
        "guests": 140,
        "name": "Nadine",
        "ranking": 3,
        "scoresGiven": Array [
          6,
          6,
          9,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 21,
          "food": 19,
          "venue": 16,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Quincy",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 40,
        "budget": 35000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 3,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Day at the Races",
        "episode": 1,
        "expDiffRanking": 4,
        "expGivenRanking": 1,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Nicole",
        "ranking": 4,
        "scoresGiven": Array [
          9,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 20,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 40,
        "spouseName": "Rob",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 24,
        "budget": 70000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 1,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Big Fat Greek Wedding",
        "episode": 1,
        "expDiffRanking": 2,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 300,
        "name": "Dimitra",
        "ranking": 1,
        "scoresGiven": Array [
          8,
          9,
          7,
        ],
        "scoresReceived": Object {
          "dress": 26,
          "experience": 25,
          "food": 22,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 29,
        "spouseName": "John",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 23,
        "budget": 55000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 1,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Japanese Garden Gala",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 3,
        "guests": 130,
        "name": "Emilee",
        "ranking": 2,
        "scoresGiven": Array [
          7,
          5,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 22,
          "food": 15,
          "venue": 26,
        },
        "season": 1,
        "spouseAge": 23,
        "spouseName": "Drew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 22,
        "budget": 20000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 3,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "By the Book",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 3,
        "expReceivedRanking": 1,
        "guests": 100,
        "name": "Danielle",
        "ranking": 1,
        "scoresGiven": Array [
          7,
          6,
          8,
        ],
        "scoresReceived": Object {
          "dress": 30,
          "experience": 23,
          "food": 26,
          "venue": 12,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Ed",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 36,
        "budget": 12500,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Sunrise Surprise",
        "episode": 2,
        "expDiffRanking": 4,
        "expGivenRanking": 2,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Keshia",
        "ranking": 4,
        "scoresGiven": Array [
          7,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 15,
          "experience": 18,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Tony",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 28,
        "budget": 25000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Beach Ball",
        "episode": 2,
        "expDiffRanking": 3,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 160,
        "name": "Tonya",
        "ranking": 3,
        "scoresGiven": Array [
          8,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 35,
        "spouseName": "Andrew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
    ]
  }
  selectOptions={
    Array [
      Object {
        "accessor": [Function],
        "format": "$.2s",
        "label": "Wedding Budget",
        "step": 10000,
        "value": "budget",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Guest Count",
        "step": 50,
        "value": "guests",
      },
      Object {
        "accessor": [Function],
        "format": "$.0f",
        "label": "Wedding Budget Per Guest",
        "step": 100,
        "value": "budgetPerGuest",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Bride Age",
        "step": 2,
        "value": "age",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Spouse Age",
        "step": 2,
        "value": "spouseAge",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Age Gap (Spouse Age - Bride Age)",
        "step": 2,
        "value": "ageGap",
      },
    ]
  }
/>
`;

exports[`smoke and snapshot tests matches snapshots 3`] = `
<SelectablePieChart
  caption="foo"
  data={
    Array [
      Object {
        "age": 27,
        "budget": 45000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "DJ Dance Party",
        "episode": 1,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 2,
        "guests": 250,
        "name": "Nic",
        "ranking": 2,
        "scoresGiven": Array [
          5,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Joe",
        "state": "New Jersey",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 30,
        "budget": 25000,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Garden Paradise",
        "episode": 1,
        "expDiffRanking": 3,
        "expGivenRanking": 3,
        "expReceivedRanking": 3,
        "guests": 140,
        "name": "Nadine",
        "ranking": 3,
        "scoresGiven": Array [
          6,
          6,
          9,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 21,
          "food": 19,
          "venue": 16,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Quincy",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 40,
        "budget": 35000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 3,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Day at the Races",
        "episode": 1,
        "expDiffRanking": 4,
        "expGivenRanking": 1,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Nicole",
        "ranking": 4,
        "scoresGiven": Array [
          9,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 20,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 40,
        "spouseName": "Rob",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 24,
        "budget": 70000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 1,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Big Fat Greek Wedding",
        "episode": 1,
        "expDiffRanking": 2,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 300,
        "name": "Dimitra",
        "ranking": 1,
        "scoresGiven": Array [
          8,
          9,
          7,
        ],
        "scoresReceived": Object {
          "dress": 26,
          "experience": 25,
          "food": 22,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 29,
        "spouseName": "John",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 23,
        "budget": 55000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 1,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Japanese Garden Gala",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 3,
        "guests": 130,
        "name": "Emilee",
        "ranking": 2,
        "scoresGiven": Array [
          7,
          5,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 22,
          "food": 15,
          "venue": 26,
        },
        "season": 1,
        "spouseAge": 23,
        "spouseName": "Drew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 22,
        "budget": 20000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 3,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "By the Book",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 3,
        "expReceivedRanking": 1,
        "guests": 100,
        "name": "Danielle",
        "ranking": 1,
        "scoresGiven": Array [
          7,
          6,
          8,
        ],
        "scoresReceived": Object {
          "dress": 30,
          "experience": 23,
          "food": 26,
          "venue": 12,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Ed",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 36,
        "budget": 12500,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Sunrise Surprise",
        "episode": 2,
        "expDiffRanking": 4,
        "expGivenRanking": 2,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Keshia",
        "ranking": 4,
        "scoresGiven": Array [
          7,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 15,
          "experience": 18,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Tony",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 28,
        "budget": 25000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Beach Ball",
        "episode": 2,
        "expDiffRanking": 3,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 160,
        "name": "Tonya",
        "ranking": 3,
        "scoresGiven": Array [
          8,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 35,
        "spouseName": "Andrew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
    ]
  }
  graphOptions={
    Object {
      "colorScale": [Function],
    }
  }
  selectOptions={
    Array [
      Object {
        "accessor": [Function],
        "label": "Rankings by Budget",
        "value": "budget",
      },
      Object {
        "accessor": [Function],
        "label": "Rankings by Budget Per Guest",
        "value": "budgetPerGuest",
      },
      Object {
        "accessor": [Function],
        "label": "Rankings by Overall Experience Points Given",
        "value": "expGiven",
      },
      Object {
        "accessor": [Function],
        "label": "Rankings by Overall Experience Points Received",
        "value": "expReceived",
      },
      Object {
        "accessor": [Function],
        "label": "Rankings by Exp Gap (Received - Given)",
        "value": "expDiff",
      },
    ]
  }
/>
`;

exports[`smoke and snapshot tests matches snapshots 4`] = `
<SelectableScatterplot
  caption="foo"
  data={
    Array [
      Object {
        "age": 27,
        "budget": 45000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "DJ Dance Party",
        "episode": 1,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 2,
        "guests": 250,
        "name": "Nic",
        "ranking": 2,
        "scoresGiven": Array [
          5,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Joe",
        "state": "New Jersey",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 30,
        "budget": 25000,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Garden Paradise",
        "episode": 1,
        "expDiffRanking": 3,
        "expGivenRanking": 3,
        "expReceivedRanking": 3,
        "guests": 140,
        "name": "Nadine",
        "ranking": 3,
        "scoresGiven": Array [
          6,
          6,
          9,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 21,
          "food": 19,
          "venue": 16,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Quincy",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 40,
        "budget": 35000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 3,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Day at the Races",
        "episode": 1,
        "expDiffRanking": 4,
        "expGivenRanking": 1,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Nicole",
        "ranking": 4,
        "scoresGiven": Array [
          9,
          7,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 20,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 40,
        "spouseName": "Rob",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 24,
        "budget": 70000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 1,
        "date": "2009-12-18T08:00:00.000Z",
        "description": "Big Fat Greek Wedding",
        "episode": 1,
        "expDiffRanking": 2,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 300,
        "name": "Dimitra",
        "ranking": 1,
        "scoresGiven": Array [
          8,
          9,
          7,
        ],
        "scoresReceived": Object {
          "dress": 26,
          "experience": 25,
          "food": 22,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 29,
        "spouseName": "John",
        "state": "New York",
        "title": "...and a Racetrack",
      },
      Object {
        "age": 23,
        "budget": 55000,
        "budgetPerGuestRanking": 1,
        "budgetRanking": 1,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Japanese Garden Gala",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 4,
        "expReceivedRanking": 3,
        "guests": 130,
        "name": "Emilee",
        "ranking": 2,
        "scoresGiven": Array [
          7,
          5,
          8,
        ],
        "scoresReceived": Object {
          "dress": 19,
          "experience": 22,
          "food": 15,
          "venue": 26,
        },
        "season": 1,
        "spouseAge": 23,
        "spouseName": "Drew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 22,
        "budget": 20000,
        "budgetPerGuestRanking": 2,
        "budgetRanking": 3,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "By the Book",
        "episode": 2,
        "expDiffRanking": 1,
        "expGivenRanking": 3,
        "expReceivedRanking": 1,
        "guests": 100,
        "name": "Danielle",
        "ranking": 1,
        "scoresGiven": Array [
          7,
          6,
          8,
        ],
        "scoresReceived": Object {
          "dress": 30,
          "experience": 23,
          "food": 26,
          "venue": 12,
        },
        "season": 1,
        "spouseAge": 32,
        "spouseName": "Ed",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 36,
        "budget": 12500,
        "budgetPerGuestRanking": 4,
        "budgetRanking": 4,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Sunrise Surprise",
        "episode": 2,
        "expDiffRanking": 4,
        "expGivenRanking": 2,
        "expReceivedRanking": 4,
        "guests": 140,
        "name": "Keshia",
        "ranking": 4,
        "scoresGiven": Array [
          7,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 15,
          "experience": 18,
          "food": 9,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 28,
        "spouseName": "Tony",
        "state": "Florida",
        "title": "...and Something Blue",
      },
      Object {
        "age": 28,
        "budget": 25000,
        "budgetPerGuestRanking": 3,
        "budgetRanking": 2,
        "date": "2010-05-07T07:00:00.000Z",
        "description": "Beach Ball",
        "episode": 2,
        "expDiffRanking": 3,
        "expGivenRanking": 1,
        "expReceivedRanking": 1,
        "guests": 160,
        "name": "Tonya",
        "ranking": 3,
        "scoresGiven": Array [
          8,
          8,
          7,
        ],
        "scoresReceived": Object {
          "dress": 12,
          "experience": 23,
          "food": 26,
          "venue": 19,
        },
        "season": 1,
        "spouseAge": 35,
        "spouseName": "Andrew",
        "state": "Florida",
        "title": "...and Something Blue",
      },
    ]
  }
  graphOptions={
    Object {
      "colorScale": [Function],
    }
  }
  selectOptions={
    Array [
      Object {
        "accessor": [Function],
        "format": "$.2s",
        "label": "Wedding Budget",
        "value": "budget",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Guest Count",
        "value": "guestCount",
      },
      Object {
        "accessor": [Function],
        "format": "$.0f",
        "label": "Budget Per Guest",
        "value": "budgetPerGuest",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Bride's Age",
        "value": "brideAge",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Spouse's Age",
        "value": "spouseAge",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Age Gap (Spouse Age - Bride Age)",
        "value": "ageGap",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Total Points Received",
        "value": "totalPoints",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Overall Experience Points Received",
        "value": "expPointsReceived",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Overall Experience Points Given",
        "value": "expPointsGiven",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Overall Exp Gap (Received - Given)",
        "value": "expPointsGap",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Dress Score",
        "value": "dressScore",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Food Score",
        "value": "foodScore",
      },
      Object {
        "accessor": [Function],
        "format": ".0f",
        "label": "Venue Score",
        "value": "venueScore",
      },
    ]
  }
/>
`;
